Fixed spacing on Projects section
fixed a spacing issue on the projects section

--- a/css/style.css
+++ b/css/style.css
@@ -132,4 +132,8 @@ blockquote{
 	.projects{
 		display: none;
 	}
+
+	section{
+		margin-bottom: 0;
+	}
 }
